Fix unit test for adding tab class to both the tab link and the tab pane

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-class.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-class.html
@@ -5,6 +5,6 @@
         </li>
     </ul>
 </div>
-<div class="tab__pane is-active" id="foo">
+<div class="tab__pane is-active one two three" id="foo">
     baz
 </div>
