--- a/emails/src/xfp-action.html
+++ b/emails/src/xfp-action.html
@@ -19,7 +19,7 @@
                     <tr>
                         <td class="branding-block">
                             <a href="http://jadu.continuum/jadu">
-                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/161352/logo-cxm-white.png" width="30px" height="30px" />
+                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/161352/logo-cxm-white.png" width="30" height="30" />
                             </a>
                         </td>
                     </tr>
