Add negative tabindex on disabled navigation tabs

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-url-href-with-src.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-url-href-with-src.html
@@ -1,7 +1,7 @@
 <div class="nav-inline t-nav-inline">
     <ul class="nav-inline__list">
         <li class="nav-inline__item nav-inline__item--is-active is-active">
-            <a data-href="?foo" href="#foo" data-toggle="tab" class="nav-inline__link">bar</a>
+            <a data-href="?foo" href="#foo" data-toggle="tab" tabindex="0" class="nav-inline__link">bar</a>
         </li>
     </ul>
 </div>
