--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-url-href-with-src-active.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-url-href-with-src-active.html
@@ -1,10 +1,10 @@
 <div class="nav-inline t-nav-inline">
     <ul class="nav-inline__list">
         <li class="nav-inline__item">
-            <a data-href="?alpha" href="#alpha" data-toggle="tab" class="nav-inline__link">Alpha</a>
+            <a data-href="?alpha" href="#alpha" data-toggle="tab" tabindex="0" class="nav-inline__link">Alpha</a>
         </li>
         <li class="nav-inline__item nav-inline__item--is-active is-active">
-            <a data-href="?bravo" href="#bravo" data-toggle="tab" class="nav-inline__link">Bravo</a>
+            <a data-href="?bravo" href="#bravo" data-toggle="tab" tabindex="0" class="nav-inline__link">Bravo</a>
         </li>
     </ul>
 </div>
