--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-url-href.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-url-href.html
@@ -1,7 +1,7 @@
 <div class="nav-inline t-nav-inline">
     <ul class="nav-inline__list">
         <li class="nav-inline__item nav-inline__item--is-active is-active">
-            <a href="http://www.foo.com" data-toggle="link" class="nav-inline__link">bar</a>
+            <a href="http://www.foo.com" data-toggle="link" tabindex="0" class="nav-inline__link">bar</a>
         </li>
     </ul>
 </div>
