--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-url-src-active.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-url-src-active.html
@@ -1,10 +1,10 @@
 <div class="nav-inline t-nav-inline">
     <ul class="nav-inline__list">
         <li class="nav-inline__item">
-            <a href="http://www.alpha.com" data-toggle="link" class="nav-inline__link">Alpha</a>
+            <a href="http://www.alpha.com" data-toggle="link" tabindex="0" class="nav-inline__link">Alpha</a>
         </li>
         <li class="nav-inline__item nav-inline__item--is-active is-active">
-            <a href="http://www.bravo.com" data-toggle="link" class="nav-inline__link">Bravo</a>
+            <a href="http://www.bravo.com" data-toggle="link" tabindex="0" class="nav-inline__link">Bravo</a>
         </li>
     </ul>
 </div>
