Remove Unnecessary ‘aria-disabled’

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-disabled.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-disabled.html
@@ -5,7 +5,7 @@
             <span class="form-choice__label">Foo</span>
         </label>
         <label class="control__label">
-            <input name="choice" value="bar" disabled aria-disabled="true" type="radio" class="form__control radio is-disabled" />
+            <input name="choice" value="bar" disabled type="radio" class="form__control radio is-disabled" />
             <span class="form-choice__label">Bar</span>
         </label>
         <label class="control__label">
