--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/nav/breadcrumb-items.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/nav/breadcrumb-items.html
@@ -1,5 +1,5 @@
-<nav class="breadcrumb">
+<nav class="breadcrumb" aria-label="breadcrumbs">
     <a href="#foo">foo</a> /
     <a href="#bar">bar</a> /
-    <a href="#baz">baz</a>
+    <a href="#baz" aria-current="page">baz</a>
 </nav>
