Remove duplicated label text (‘toggle’) from toggle switch

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-error.html
@@ -3,7 +3,7 @@
     <div class="controls">
         <input id="toggletest" type="checkbox" class="form__control toggle-switch" />
         <label for="toggletest" class="control__label toggle-switch-label">
-            <span class="hide">Toggle</span>
+            <span class="hide">toggle Toggle</span>
         </label>
         <span class="help-block is-error"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
     </div>
