--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-class.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-class.html
@@ -3,7 +3,7 @@
     <div class="controls">
         <input id="toggletest" type="checkbox" class="form__control toggle-switch" />
         <label for="toggletest" class="control__label toggle-switch-label">
-            <span class="hide">Toggle</span>
+            <span class="hide">toggle Toggle</span>
         </label>
     </div>
 </div>
