--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-help.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-help.html
@@ -3,7 +3,7 @@
 	<div class="controls">
 		<input id="toggletest" type="checkbox" aria-describedby="guid-1" class="form__control toggle-switch" />
 		<label for="toggletest" class="control__label toggle-switch-label">
-			<span class="hide">Toggle</span>
+			<span class="hide">toggle Toggle</span>
 		</label>
 		<span class="help-block" id="guid-1">my help text</span>
 	</div>
