Fixed failing tests

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group-help.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group-help.html
@@ -1,4 +1,4 @@
-<div aria-describedby="guid-1" class="form__group form__button-group">
+<div class="form__group form__button-group">
     <div class="controls btn__group">
         <input name="bands" type="radio" class="form__control radio" />
         <label class="control__label">AM</label>
