--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/checkbox-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/checkbox-error.html
@@ -1,6 +1,6 @@
 <div class="form__group has-error form-checkbox">
     <div class="controls">
-        <input type="checkbox" class="form__control checkbox" />
-        <span class="help-block is-error"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
+        <input type="checkbox" aria-describedby="guid-1" aria-invalid="true" class="form__control checkbox" />
+        <span class="help-block is-error" role="alert" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
     </div>
 </div>
