--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/compound-help.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/compound-help.html
@@ -1,12 +1,12 @@
-<fieldset id="foo" aria-describedby="guid-1" class="form__group form__group--compound">
+<fieldset id="foo" class="form__group form__group--compound">
     <legend class="control__label" id="foo[label]">fooLabel</legend>
 
     <div class="controls">
         <label for="fooInputId" id="fooInputId[label]" class="control__label hide">fooInputLabel</label>
-        <input id="fooInputId" type="text" class="form__control fooInputClass" />
+        <input id="fooInputId" type="text" aria-describedby="guid-1" class="form__control fooInputClass" />
 
         <label for="barInputId" id="barInputId[label]" class="control__label hide">barInputLabel</label>
-        <input id="barInputId" type="text" class="form__control barInputClass" />
+        <input id="barInputId" type="text" aria-describedby="guid-1" class="form__control barInputClass" />
 
         <span class="help-block" id="guid-1">my help text</span>
     </div>
