--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-help.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-help.html
@@ -1,15 +1,15 @@
-<div aria-describedby="guid-1" class="form__group form-choice">
+<div class="form__group form-choice">
     <div class="controls">
         <label class="control__label">
-            <input name="choice" value="foo" type="radio" class="form__control radio" />
+            <input name="choice" value="foo" aria-describedby="guid-1" type="radio" class="form__control radio" />
             <span class="form-choice__label">Foo</span>
         </label>
         <label class="control__label">
-            <input name="choice" value="bar" type="radio" class="form__control radio" />
+            <input name="choice" value="bar" aria-describedby="guid-1" type="radio" class="form__control radio" />
             <span class="form-choice__label">Bar</span>
         </label>
         <label class="control__label">
-            <input name="choice" value="baz" type="radio" class="form__control radio" />
+            <input name="choice" value="baz" aria-describedby="guid-1" type="radio" class="form__control radio" />
             <span class="form-choice__label">Baz</span>
         </label>
         <span class="help-block" id="guid-1">my help text</span>
