--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select-error.html
@@ -1,9 +1,9 @@
 <div class="form__group has-error">
     <div class="controls">
-        <select class="form__control select">
+        <select aria-describedby="guid-1" aria-invalid="true" class="form__control select">
             <option value="foo">bar</option>
             <option value="bar">baz</option>
         </select>
-        <span class="help-block is-error"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
+        <span class="help-block is-error" role="alert" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
     </div>
 </div>
