--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/textarea-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/textarea-error.html
@@ -1,6 +1,6 @@
 <div class="form__group has-error">
     <div class="controls">
-        <textarea class="form__control textarea"></textarea>
-        <span class="help-block is-error"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
+        <textarea aria-describedby="guid-1" aria-invalid="true" class="form__control textarea"></textarea>
+        <span class="help-block is-error" role="alert" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
     </div>
 </div>
