Added  aria-atomic="true" where role="alert" is used to form helpers and docs/tests

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-error.html
@@ -5,6 +5,6 @@
         <label for="toggletest" class="control__label toggle-switch-label">
             <span class="hide">Toggle</span>
         </label>
-        <span class="help-block is-error" role="alert" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
+        <span class="help-block is-error" role="alert" aria-atomic="true" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
     </div>
 </div>
