--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group-error.html
@@ -6,6 +6,6 @@
         <label class="control__label">FM</label>
         <input name="bands" type="radio" class="form__control radio" />
         <label class="control__label">MW</label>
-        <span class="help-block is-error" role="alert" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
+        <span class="help-block is-error" role="alert" aria-atomic="true" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
     </div>
 </div>
