--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/time-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/time-error.html
@@ -1,6 +1,6 @@
 <div class="form__group has-error">
     <div class="controls">
         <input placeholder="hh:mm" data-timepicker="true" type="text" aria-describedby="guid-1" aria-invalid="true" class="form__control" />
-        <span class="help-block is-error" role="alert" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
+        <span class="help-block is-error" role="alert" aria-atomic="true" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
     </div>
 </div>
