--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-error.html
@@ -12,6 +12,6 @@
             <input name="choice" value="baz" aria-describedby="guid-1" type="radio" aria-invalid="true" class="form__control radio" />
             <span class="form-choice__label">Baz</span>
         </label>
-        <span class="help-block is-error" role="alert" aria-atomic="true" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
+        <span class="help-block is-error" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
     </div>
 </div>
