--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_multiple.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_multiple.html
@@ -1,10 +1,10 @@
 <nav class="nav-inline t-nav-inline" aria-label="secondary">
     <ul class="nav-inline__list">
         <li class="nav-inline__item nav-inline__item--is-active is-active">
-            <a aria-current="page" href="#alpha" data-toggle="tab" tabindex="0" class="nav-inline__link">Alpha</a>
+            <a aria-current="page" href="#alpha" data-toggle="tab" class="nav-inline__link">Alpha</a>
         </li>
         <li class="nav-inline__item">
-            <a href="#bravo" data-toggle="tab" tabindex="0" class="nav-inline__link">Bravo</a>
+            <a href="#bravo" data-toggle="tab" class="nav-inline__link">Bravo</a>
         </li>
     </ul>
 </nav>
