Fixes the unit tests which feature disabled elements to include the new attributes

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/visuals/button-states-outline.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/visuals/button-states-outline.html
@@ -1,1 +1,57 @@
-<table class="table"><thead><tr><th></th><th>Base</th><th>Hover</th><th>Active</th><th>Disabled</th><th>Naked</th><th>Naked Active</th></tr></thead><tbody><tr><td>Default</td><td><button class="btn btn--outline">Button</button></td><td><button class="btn btn--outline is-hovered">Button</button></td><td><button class="btn btn--outline active">Button</button></td><td><button class="btn btn--outline is-disabled">Button</button></td><td><button class="btn btn--outline btn--naked">Button</button></td><td><button class="btn btn--outline btn--naked active">Button</button></td></tr><tr><td>Primary</td><td><button class="btn btn--outline btn--primary">Button</button></td><td><button class="btn btn--outline btn--primary is-hovered">Button</button></td><td><button class="btn btn--outline btn--primary active">Button</button></td><td><button class="btn btn--outline btn--primary is-disabled">Button</button></td><td><button class="btn btn--outline btn--primary btn--naked">Button</button></td><td><button class="btn btn--outline btn--primary btn--naked active">Button</button></td></tr><tr><td>Success</td><td><button class="btn btn--outline btn--success">Button</button></td><td><button class="btn btn--outline btn--success is-hovered">Button</button></td><td><button class="btn btn--outline btn--success active">Button</button></td><td><button class="btn btn--outline btn--success is-disabled">Button</button></td><td><button class="btn btn--outline btn--success btn--naked">Button</button></td><td><button class="btn btn--outline btn--success btn--naked active">Button</button></td></tr><tr><td>Warning</td><td><button class="btn btn--outline btn--warning">Button</button></td><td><button class="btn btn--outline btn--warning is-hovered">Button</button></td><td><button class="btn btn--outline btn--warning active">Button</button></td><td><button class="btn btn--outline btn--warning is-disabled">Button</button></td><td><button class="btn btn--outline btn--warning btn--naked">Button</button></td><td><button class="btn btn--outline btn--warning btn--naked active">Button</button></td></tr><tr><td>Danger</td><td><button class="btn btn--outline btn--danger">Button</button></td><td><button class="btn btn--outline btn--danger is-hovered">Button</button></td><td><button class="btn btn--outline btn--danger active">Button</button></td><td><button class="btn btn--outline btn--danger is-disabled">Button</button></td><td><button class="btn btn--outline btn--danger btn--naked">Button</button></td><td><button class="btn btn--outline btn--danger btn--naked active">Button</button></td></tr><tr><td>Info</td><td><button class="btn btn--outline btn--info">Button</button></td><td><button class="btn btn--outline btn--info is-hovered">Button</button></td><td><button class="btn btn--outline btn--info active">Button</button></td><td><button class="btn btn--outline btn--info is-disabled">Button</button></td><td><button class="btn btn--outline btn--info btn--naked">Button</button></td><td><button class="btn btn--outline btn--info btn--naked active">Button</button></td></tr><tr><td>Inverse</td><td><button class="btn btn--outline btn--inverse">Button</button></td><td><button class="btn btn--outline btn--inverse is-hovered">Button</button></td><td><button class="btn btn--outline btn--inverse active">Button</button></td><td><button class="btn btn--outline btn--inverse is-disabled">Button</button></td><td><button class="btn btn--outline btn--inverse btn--naked">Button</button></td><td><button class="btn btn--outline btn--inverse btn--naked active">Button</button></td></tr></tbody></table>
+<table class="table"><thead><tr><th></th>
+    <th>Base</th>
+    <th>Hover</th>
+    <th>Active</th>
+    <th>Disabled</th>
+    <th>Naked</th>
+    <th>Naked Active</th>
+</tr></thead><tbody><tr><td>Default</td>
+    <td><button class="btn btn--outline">Button</button></td>
+    <td><button class="btn btn--outline is-hovered">Button</button></td>
+    <td><button class="btn btn--outline active">Button</button></td>
+    <td><button disabled class="btn btn--outline is-disabled">Button</button></td>
+    <td><button class="btn btn--outline btn--naked">Button</button></td>
+    <td><button class="btn btn--outline btn--naked active">Button</button></td>
+</tr><tr><td>Primary</td>
+    <td><button class="btn btn--outline btn--primary">Button</button></td>
+    <td><button class="btn btn--outline btn--primary is-hovered">Button</button></td>
+    <td><button class="btn btn--outline btn--primary active">Button</button></td>
+    <td><button disabled class="btn btn--outline btn--primary is-disabled">Button</button></td>
+    <td><button class="btn btn--outline btn--primary btn--naked">Button</button></td>
+    <td><button class="btn btn--outline btn--primary btn--naked active">Button</button></td>
+</tr><tr><td>Success</td>
+    <td><button class="btn btn--outline btn--success">Button</button></td>
+    <td><button class="btn btn--outline btn--success is-hovered">Button</button></td>
+    <td><button class="btn btn--outline btn--success active">Button</button></td>
+    <td><button disabled class="btn btn--outline btn--success is-disabled">Button</button></td>
+    <td><button class="btn btn--outline btn--success btn--naked">Button</button></td>
+    <td><button class="btn btn--outline btn--success btn--naked active">Button</button></td>
+</tr><tr><td>Warning</td>
+    <td><button class="btn btn--outline btn--warning">Button</button></td>
+    <td><button class="btn btn--outline btn--warning is-hovered">Button</button></td>
+    <td><button class="btn btn--outline btn--warning active">Button</button></td>
+    <td><button disabled class="btn btn--outline btn--warning is-disabled">Button</button></td>
+    <td><button class="btn btn--outline btn--warning btn--naked">Button</button></td>
+    <td><button class="btn btn--outline btn--warning btn--naked active">Button</button></td>
+</tr><tr><td>Danger</td>
+    <td><button class="btn btn--outline btn--danger">Button</button></td>
+    <td><button class="btn btn--outline btn--danger is-hovered">Button</button></td>
+    <td><button class="btn btn--outline btn--danger active">Button</button></td>
+    <td><button disabled class="btn btn--outline btn--danger is-disabled">Button</button></td>
+    <td><button class="btn btn--outline btn--danger btn--naked">Button</button></td>
+    <td><button class="btn btn--outline btn--danger btn--naked active">Button</button></td>
+</tr><tr><td>Info</td>
+    <td><button class="btn btn--outline btn--info">Button</button></td>
+    <td><button class="btn btn--outline btn--info is-hovered">Button</button></td>
+    <td><button class="btn btn--outline btn--info active">Button</button></td>
+    <td><button disabled class="btn btn--outline btn--info is-disabled">Button</button></td>
+    <td><button class="btn btn--outline btn--info btn--naked">Button</button></td>
+    <td><button class="btn btn--outline btn--info btn--naked active">Button</button></td>
+</tr><tr><td>Inverse</td>
+    <td><button class="btn btn--outline btn--inverse">Button</button></td>
+    <td><button class="btn btn--outline btn--inverse is-hovered">Button</button></td>
+    <td><button class="btn btn--outline btn--inverse active">Button</button></td>
+    <td><button disabled class="btn btn--outline btn--inverse is-disabled">Button</button></td>
+    <td><button class="btn btn--outline btn--inverse btn--naked">Button</button></td>
+    <td><button class="btn btn--outline btn--inverse btn--naked active">Button</button></td>
+</tr></tbody></table>
