--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/visuals/link-button-states-disabled.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/visuals/link-button-states-disabled.html
@@ -1,1 +1,57 @@
-<table class="table"><thead><tr><th></th><th>Base</th><th>Hover</th><th>Active</th><th>Disabled</th><th>Naked</th><th>Naked Active</th></tr></thead><tbody><tr><td>Default</td><td><a class="btn is-disabled">Button</a></td><td><a class="btn is-disabled is-hovered">Button</a></td><td><a class="btn is-disabled active">Button</a></td><td><a class="btn is-disabled">Button</a></td><td><a class="btn is-disabled btn--naked">Button</a></td><td><a class="btn is-disabled btn--naked active">Button</a></td></tr><tr><td>Primary</td><td><a class="btn is-disabled btn--primary">Button</a></td><td><a class="btn is-disabled btn--primary is-hovered">Button</a></td><td><a class="btn is-disabled btn--primary active">Button</a></td><td><a class="btn is-disabled btn--primary">Button</a></td><td><a class="btn is-disabled btn--primary btn--naked">Button</a></td><td><a class="btn is-disabled btn--primary btn--naked active">Button</a></td></tr><tr><td>Success</td><td><a class="btn is-disabled btn--success">Button</a></td><td><a class="btn is-disabled btn--success is-hovered">Button</a></td><td><a class="btn is-disabled btn--success active">Button</a></td><td><a class="btn is-disabled btn--success">Button</a></td><td><a class="btn is-disabled btn--success btn--naked">Button</a></td><td><a class="btn is-disabled btn--success btn--naked active">Button</a></td></tr><tr><td>Warning</td><td><a class="btn is-disabled btn--warning">Button</a></td><td><a class="btn is-disabled btn--warning is-hovered">Button</a></td><td><a class="btn is-disabled btn--warning active">Button</a></td><td><a class="btn is-disabled btn--warning">Button</a></td><td><a class="btn is-disabled btn--warning btn--naked">Button</a></td><td><a class="btn is-disabled btn--warning btn--naked active">Button</a></td></tr><tr><td>Danger</td><td><a class="btn is-disabled btn--danger">Button</a></td><td><a class="btn is-disabled btn--danger is-hovered">Button</a></td><td><a class="btn is-disabled btn--danger active">Button</a></td><td><a class="btn is-disabled btn--danger">Button</a></td><td><a class="btn is-disabled btn--danger btn--naked">Button</a></td><td><a class="btn is-disabled btn--danger btn--naked active">Button</a></td></tr><tr><td>Info</td><td><a class="btn is-disabled btn--info">Button</a></td><td><a class="btn is-disabled btn--info is-hovered">Button</a></td><td><a class="btn is-disabled btn--info active">Button</a></td><td><a class="btn is-disabled btn--info">Button</a></td><td><a class="btn is-disabled btn--info btn--naked">Button</a></td><td><a class="btn is-disabled btn--info btn--naked active">Button</a></td></tr><tr><td>Inverse</td><td><a class="btn is-disabled btn--inverse">Button</a></td><td><a class="btn is-disabled btn--inverse is-hovered">Button</a></td><td><a class="btn is-disabled btn--inverse active">Button</a></td><td><a class="btn is-disabled btn--inverse">Button</a></td><td><a class="btn is-disabled btn--inverse btn--naked">Button</a></td><td><a class="btn is-disabled btn--inverse btn--naked active">Button</a></td></tr></tbody></table>
+<table class="table"><thead><tr><th></th>
+    <th>Base</th>
+    <th>Hover</th>
+    <th>Active</th>
+    <th>Disabled</th>
+    <th>Naked</th>
+    <th>Naked Active</th>
+</tr></thead><tbody><tr><td>Default</td>
+    <td><a aria-disabled="true" class="btn is-disabled">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled is-hovered">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled active">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--naked">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--naked active">Button</a></td>
+</tr><tr><td>Primary</td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--primary">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--primary is-hovered">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--primary active">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--primary">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--primary btn--naked">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--primary btn--naked active">Button</a></td>
+</tr><tr><td>Success</td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--success">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--success is-hovered">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--success active">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--success">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--success btn--naked">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--success btn--naked active">Button</a></td>
+</tr><tr><td>Warning</td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--warning">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--warning is-hovered">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--warning active">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--warning">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--warning btn--naked">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--warning btn--naked active">Button</a></td>
+</tr><tr><td>Danger</td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--danger">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--danger is-hovered">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--danger active">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--danger">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--danger btn--naked">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--danger btn--naked active">Button</a></td>
+</tr><tr><td>Info</td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--info">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--info is-hovered">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--info active">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--info">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--info btn--naked">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--info btn--naked active">Button</a></td>
+</tr><tr><td>Inverse</td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--inverse">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--inverse is-hovered">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--inverse active">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--inverse">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--inverse btn--naked">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--inverse btn--naked active">Button</a></td>
+</tr></tbody></table>
