--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/visuals/link-button-states-small-disabled.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/visuals/link-button-states-small-disabled.html
@@ -1,1 +1,64 @@
-<table class="table"><thead><tr><th></th><th>Base</th><th>Hover</th><th>Active</th><th>Disabled</th><th>Naked</th><th>Naked Active</th></tr></thead><tbody><tr><td>Default</td><td><a class="btn is-disabled btn--small">Button</a></td><td><a class="btn is-disabled btn--small is-hovered">Button</a></td><td><a class="btn is-disabled btn--small active">Button</a></td><td><a class="btn is-disabled btn--small">Button</a></td><td><a class="btn is-disabled btn--small btn--naked">Button</a></td><td><a class="btn is-disabled btn--small btn--naked active">Button</a></td></tr><tr><td>Primary</td><td><a class="btn is-disabled btn--small btn--primary">Button</a></td><td><a class="btn is-disabled btn--small btn--primary is-hovered">Button</a></td><td><a class="btn is-disabled btn--small btn--primary active">Button</a></td><td><a class="btn is-disabled btn--small btn--primary">Button</a></td><td><a class="btn is-disabled btn--small btn--primary btn--naked">Button</a></td><td><a class="btn is-disabled btn--small btn--primary btn--naked active">Button</a></td></tr><tr><td>Success</td><td><a class="btn is-disabled btn--small btn--success">Button</a></td><td><a class="btn is-disabled btn--small btn--success is-hovered">Button</a></td><td><a class="btn is-disabled btn--small btn--success active">Button</a></td><td><a class="btn is-disabled btn--small btn--success">Button</a></td><td><a class="btn is-disabled btn--small btn--success btn--naked">Button</a></td><td><a class="btn is-disabled btn--small btn--success btn--naked active">Button</a></td></tr><tr><td>Warning</td><td><a class="btn is-disabled btn--small btn--warning">Button</a></td><td><a class="btn is-disabled btn--small btn--warning is-hovered">Button</a></td><td><a class="btn is-disabled btn--small btn--warning active">Button</a></td><td><a class="btn is-disabled btn--small btn--warning">Button</a></td><td><a class="btn is-disabled btn--small btn--warning btn--naked">Button</a></td><td><a class="btn is-disabled btn--small btn--warning btn--naked active">Button</a></td></tr><tr><td>Danger</td><td><a class="btn is-disabled btn--small btn--danger">Button</a></td><td><a class="btn is-disabled btn--small btn--danger is-hovered">Button</a></td><td><a class="btn is-disabled btn--small btn--danger active">Button</a></td><td><a class="btn is-disabled btn--small btn--danger">Button</a></td><td><a class="btn is-disabled btn--small btn--danger btn--naked">Button</a></td><td><a class="btn is-disabled btn--small btn--danger btn--naked active">Button</a></td></tr><tr><td>Info</td><td><a class="btn is-disabled btn--small btn--info">Button</a></td><td><a class="btn is-disabled btn--small btn--info is-hovered">Button</a></td><td><a class="btn is-disabled btn--small btn--info active">Button</a></td><td><a class="btn is-disabled btn--small btn--info">Button</a></td><td><a class="btn is-disabled btn--small btn--info btn--naked">Button</a></td><td><a class="btn is-disabled btn--small btn--info btn--naked active">Button</a></td></tr><tr><td>Inverse</td><td><a class="btn is-disabled btn--small btn--inverse">Button</a></td><td><a class="btn is-disabled btn--small btn--inverse is-hovered">Button</a></td><td><a class="btn is-disabled btn--small btn--inverse active">Button</a></td><td><a class="btn is-disabled btn--small btn--inverse">Button</a></td><td><a class="btn is-disabled btn--small btn--inverse btn--naked">Button</a></td><td><a class="btn is-disabled btn--small btn--inverse btn--naked active">Button</a></td></tr><tr class="row-inverse"><td style="color: white;">White</td><td><a class="btn is-disabled btn--small btn--white">Button</a></td><td><a class="btn is-disabled btn--small btn--white is-hovered">Button</a></td><td><a class="btn is-disabled btn--small btn--white active">Button</a></td><td><a class="btn is-disabled btn--small btn--white">Button</a></td><td><a class="btn is-disabled btn--small btn--white btn--naked">Button</a></td><td><a class="btn is-disabled btn--small btn--outline btn--white btn--naked active">Button</a></td></tr></tbody></table>
+<table class="table"><thead><tr><th></th>
+    <th>Base</th>
+    <th>Hover</th>
+    <th>Active</th>
+    <th>Disabled</th>
+    <th>Naked</th>
+    <th>Naked Active</th>
+</tr></thead><tbody><tr><td>Default</td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small is-hovered">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small active">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--naked">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--naked active">Button</a></td>
+</tr><tr><td>Primary</td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--primary">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--primary is-hovered">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--primary active">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--primary">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--primary btn--naked">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--primary btn--naked active">Button</a></td>
+</tr><tr><td>Success</td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--success">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--success is-hovered">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--success active">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--success">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--success btn--naked">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--success btn--naked active">Button</a></td>
+</tr><tr><td>Warning</td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--warning">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--warning is-hovered">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--warning active">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--warning">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--warning btn--naked">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--warning btn--naked active">Button</a></td>
+</tr><tr><td>Danger</td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--danger">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--danger is-hovered">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--danger active">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--danger">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--danger btn--naked">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--danger btn--naked active">Button</a></td>
+</tr><tr><td>Info</td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--info">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--info is-hovered">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--info active">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--info">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--info btn--naked">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--info btn--naked active">Button</a></td>
+</tr><tr><td>Inverse</td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--inverse">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--inverse is-hovered">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--inverse active">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--inverse">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--inverse btn--naked">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--inverse btn--naked active">Button</a></td>
+</tr><tr class="row-inverse"><td style="color: white;">White</td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--white">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--white is-hovered">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--white active">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--white">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--white btn--naked">Button</a></td>
+    <td><a aria-disabled="true" class="btn is-disabled btn--small btn--outline btn--white btn--naked active">Button</a></td>
+</tr></tbody></table>
