--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/visuals/button-states.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/visuals/button-states.html
@@ -1,1 +1,72 @@
-<table class="table"><thead><tr><th></th><th>Base</th><th>Hover</th><th>Active</th><th>Disabled</th><th>Naked</th><th>Naked Active</th></tr></thead><tbody><tr><td>Default</td><td><button class="btn">Button</button></td><td><button class="btn is-hovered">Button</button></td><td><button class="btn active">Button</button></td><td><button class="btn is-disabled">Button</button></td><td><button class="btn btn--naked">Button</button></td><td><button class="btn btn--naked active">Button</button></td></tr><tr><td>Primary</td><td><button class="btn btn--primary">Button</button></td><td><button class="btn btn--primary is-hovered">Button</button></td><td><button class="btn btn--primary active">Button</button></td><td><button class="btn btn--primary is-disabled">Button</button></td><td><button class="btn btn--primary btn--naked">Button</button></td><td><button class="btn btn--primary btn--naked active">Button</button></td></tr><tr><td>Success</td><td><button class="btn btn--success">Button</button></td><td><button class="btn btn--success is-hovered">Button</button></td><td><button class="btn btn--success active">Button</button></td><td><button class="btn btn--success is-disabled">Button</button></td><td><button class="btn btn--success btn--naked">Button</button></td><td><button class="btn btn--success btn--naked active">Button</button></td></tr><tr><td>Warning</td><td><button class="btn btn--warning">Button</button></td><td><button class="btn btn--warning is-hovered">Button</button></td><td><button class="btn btn--warning active">Button</button></td><td><button class="btn btn--warning is-disabled">Button</button></td><td><button class="btn btn--warning btn--naked">Button</button></td><td><button class="btn btn--warning btn--naked active">Button</button></td></tr><tr><td>Danger</td><td><button class="btn btn--danger">Button</button></td><td><button class="btn btn--danger is-hovered">Button</button></td><td><button class="btn btn--danger active">Button</button></td><td><button class="btn btn--danger is-disabled">Button</button></td><td><button class="btn btn--danger btn--naked">Button</button></td><td><button class="btn btn--danger btn--naked active">Button</button></td></tr><tr><td>Info</td><td><button class="btn btn--info">Button</button></td><td><button class="btn btn--info is-hovered">Button</button></td><td><button class="btn btn--info active">Button</button></td><td><button class="btn btn--info is-disabled">Button</button></td><td><button class="btn btn--info btn--naked">Button</button></td><td><button class="btn btn--info btn--naked active">Button</button></td></tr><tr><td>Inverse</td><td><button class="btn btn--inverse">Button</button></td><td><button class="btn btn--inverse is-hovered">Button</button></td><td><button class="btn btn--inverse active">Button</button></td><td><button class="btn btn--inverse is-disabled">Button</button></td><td><button class="btn btn--inverse btn--naked">Button</button></td><td><button class="btn btn--inverse btn--naked active">Button</button></td></tr></tbody></table>
+<table class="table">
+    <thead>
+        <tr>
+            <th></th>
+            <th>Base</th>
+            <th>Hover</th>
+            <th>Active</th>
+            <th>Disabled</th>
+            <th>Naked</th>
+            <th>Naked Active</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Default</td>
+            <td><button class="btn">Button</button></td>
+            <td><button class="btn is-hovered">Button</button></td>
+            <td><button class="btn active">Button</button></td>
+            <td><button disabled class="btn is-disabled">Button</button></td>
+            <td><button class="btn btn--naked">Button</button></td>
+            <td><button class="btn btn--naked active">Button</button></td></tr>
+        <tr>
+            <td>Primary</td>
+            <td><button class="btn btn--primary">Button</button></td>
+            <td><button class="btn btn--primary is-hovered">Button</button></td>
+            <td><button class="btn btn--primary active">Button</button></td>
+            <td><button disabled class="btn btn--primary is-disabled">Button</button></td>
+            <td><button class="btn btn--primary btn--naked">Button</button></td>
+            <td><button class="btn btn--primary btn--naked active">Button</button></td></tr>
+        <tr>
+            <td>Success</td>
+            <td><button class="btn btn--success">Button</button></td>
+            <td><button class="btn btn--success is-hovered">Button</button></td>
+            <td><button class="btn btn--success active">Button</button></td>
+            <td><button disabled class="btn btn--success is-disabled">Button</button></td>
+            <td><button class="btn btn--success btn--naked">Button</button></td>
+            <td><button class="btn btn--success btn--naked active">Button</button></td></tr>
+        <tr>
+            <td>Warning</td>
+            <td><button class="btn btn--warning">Button</button></td>
+            <td><button class="btn btn--warning is-hovered">Button</button></td>
+            <td><button class="btn btn--warning active">Button</button></td>
+            <td><button disabled class="btn btn--warning is-disabled">Button</button></td>
+            <td><button class="btn btn--warning btn--naked">Button</button></td>
+            <td><button class="btn btn--warning btn--naked active">Button</button></td></tr>
+        <tr>
+            <td>Danger</td>
+            <td><button class="btn btn--danger">Button</button></td>
+            <td><button class="btn btn--danger is-hovered">Button</button></td>
+            <td><button class="btn btn--danger active">Button</button></td>
+            <td><button disabled class="btn btn--danger is-disabled">Button</button></td>
+            <td><button class="btn btn--danger btn--naked">Button</button></td>
+            <td><button class="btn btn--danger btn--naked active">Button</button></td></tr>
+        <tr>
+            <td>Info</td>
+            <td><button class="btn btn--info">Button</button></td>
+            <td><button class="btn btn--info is-hovered">Button</button></td>
+            <td><button class="btn btn--info active">Button</button></td>
+            <td><button disabled class="btn btn--info is-disabled">Button</button></td>
+            <td><button class="btn btn--info btn--naked">Button</button></td>
+            <td><button class="btn btn--info btn--naked active">Button</button></td></tr>
+        <tr>
+            <td>Inverse</td>
+            <td><button class="btn btn--inverse">Button</button></td>
+            <td><button class="btn btn--inverse is-hovered">Button</button></td>
+            <td><button class="btn btn--inverse active">Button</button></td>
+            <td><button disabled class="btn btn--inverse is-disabled">Button</button></td>
+            <td><button class="btn btn--inverse btn--naked">Button</button></td>
+            <td><button class="btn btn--inverse btn--naked active">Button</button></td>
+        </tr>
+    </tbody>
+</table>
