Adds more unit tests to cover disabled attribute behaviour

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-disabled.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-disabled.html
@@ -1,7 +1,7 @@
 <nav class="nav-inline t-nav-inline" aria-label="secondary">
     <ul class="nav-inline__list">
         <li class="nav-inline__item nav-inline__item--is-active is-active">
-            <a aria-current="page" href="#" data-toggle="link" aria-disabled="true" tabindex="-1" class="nav-inline__link is-disabled">bar</a>
+            <a aria-current="page" href="#" data-toggle="link" tabindex="-1" aria-disabled="true" class="nav-inline__link is-disabled">bar</a>
         </li>
     </ul>
 </nav>
