--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/date-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/date-error.html
@@ -1,6 +1,6 @@
 <div class="form__group has-error">
     <div class="controls">
-        <input placeholder="dd/mm/yyyy" data-datepicker="true" type="text" aria-describedby="guid-1" aria-invalid="true" class="form__control" />
+        <input placeholder="dd/mm/yyyy" data-datepicker="true" data-dateformat="default" type="text" aria-describedby="guid-1" aria-invalid="true" class="form__control" />
         <span class="help-block is-error" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
     </div>
 </div>
