--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/date-prepend.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/date-prepend.html
@@ -2,7 +2,7 @@
     <div class="controls">
         <div class="input-group">
             <span class="input-group-addon">foo</span>
-            <input placeholder="dd/mm/yyyy" data-datepicker="true" type="text" class="form__control" />
+            <input placeholder="dd/mm/yyyy" data-datepicker="true" data-dateformat="default" type="text" class="form__control" />
         </div>
     </div>
 </div>
