--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/date-bare.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/date-bare.html
@@ -1,1 +1,1 @@
-<input placeholder="dd/mm/yyyy" data-datepicker="true" data-dateformat="default" type="text" class="form__control" />
+<input placeholder="dd/mm/yyyy" data-datepicker="true" data-format="default" type="text" class="form__control" />
