--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/date-guidance.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/date-guidance.html
@@ -3,6 +3,6 @@
         <i data-container="body" data-content="bar" data-placement="top" rel="clickover" aria-hidden="true" class="icon-question-sign input-group-guidance"></i>
     </label>
     <div class="controls">
-        <input placeholder="dd/mm/yyyy" data-datepicker="true" data-dateformat="default" type="text" class="form__control" />
+        <input placeholder="dd/mm/yyyy" data-datepicker="true" data-format="default" type="text" class="form__control" />
     </div>
 </div>
