--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/date-help.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/date-help.html
@@ -1,6 +1,6 @@
 <div class="form__group">
     <div class="controls">
-        <input placeholder="dd/mm/yyyy" data-datepicker="true" data-dateformat="default" type="text" aria-describedby="guid-1" class="form__control" />
+        <input placeholder="dd/mm/yyyy" data-datepicker="true" data-format="default" type="text" aria-describedby="guid-1" class="form__control" />
         <span class="help-block" id="guid-1">my help text</span>
     </div>
 </div>
