--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/date-label.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/date-label.html
@@ -1,6 +1,6 @@
 <div class="form__group">
     <label class="control__label">Foo</label>
     <div class="controls">
-        <input placeholder="dd/mm/yyyy" data-datepicker="true" data-dateformat="default" type="text" class="form__control" />
+        <input placeholder="dd/mm/yyyy" data-datepicker="true" data-format="default" type="text" class="form__control" />
     </div>
 </div>
