--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-label-hide.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-label-hide.html
@@ -1,9 +1,9 @@
-<div class="form__group form__group--toggle">
-    <label class="control__label hide">Toggle</label>
-    <div class="controls">
-        <input id="toggletest" type="checkbox" class="form__control toggle-switch" />
-        <label for="toggletest" class="control__label toggle-switch-label">
-            <span class="hide">Toggle</span>
-        </label>
-    </div>
+<div class="form__group  form__group--toggle">
+    <label class="toggle-switch-wrapper-label" for="toggletest" >
+        <span class="control__label hide">Toggle</span>
+        <span class="controls">
+            <input id="toggletest" type="checkbox" class="form__control toggle-switch" />
+            <span class="toggle-switch-label"></span>
+        </span>
+    </label>
 </div>
