Unit tests for Symfony Formns

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-help.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-help.html
@@ -1,8 +1,11 @@
 <div class="form__group">
+	<label for="form_field" class="control__label">foo</label>
 	<div class="controls">
 		<input 
 		aria-describedby="guid-1" 
-		type="text" 
+		id="form_field" 
+		name="form[field]" 
+		type="text"
 		class="form__control" />
 		<span class="help-block" id="guid-1">my help text</span>
 	</div>
