--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-guidance.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-guidance.html
@@ -1,5 +1,5 @@
 <div class="form__group">
-    <label class="control__label">foo
+    <label for="form_field" class="control__label">foo
         <i
         aria-hidden="true" 
         data-autoclose="true" 
@@ -10,6 +10,6 @@
         class="icon-question-sign input-group-guidance"></i>
     </label>
     <div class="controls">
-        <input type="text" class="form__control" />
+        <input id="form_field" name="form[field]" type="text" class="form__control" />
     </div>
 </div>
