Symfony fixtures for required/appended/prepended

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-prepend-append.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-prepend-append.html
@@ -4,6 +4,7 @@
         <div class="input-group">
             <span class="input-group-addon">bar</span>
             <input id="form_field" name="form[field]" type="text" class="form__control" />
+            <span class="input-group-addon">baz</span>
         </div>
     </div>
 </div>
