--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-append.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-append.html
@@ -1,8 +1,9 @@
 <div class="form__group">
+    <label for="form_field" class="control__label">foo</label>
     <div class="controls">
         <div class="input-group">
-            <input type="text" class="form__control" />
-            <span class="input-group-addon">foo</span>
+            <input id="form_field" name="form[field]" type="text" class="form__control" />
+            <span class="input-group-addon">bar</span>
         </div>
     </div>
 </div>
