--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/textarea-guidance-container.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/textarea-guidance-container.html
@@ -1,13 +1,13 @@
 <div class="form__group">
-    <label class="control__label">foo <i
+    <label for="form_field" class="control__label">foo <i
         aria-hidden="true"
         data-autoclose="true"
         data-container="baz"
-        data-content="bar"
+        data-content="foo &lt;span class=&quot;bar&quot;&gt;bar&lt;/span&gt;"
         data-placement="top"
         data-toggle="popover"
         class="icon-question-sign input-group-guidance"></i></label>
     <div class="controls">
-        <textarea class="form__control textarea"></textarea>
+        <textarea id="form_field" name="form[field]" class="form__control textarea"></textarea>
     </div>
 </div>
