--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/checkbox-help.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/checkbox-help.html
@@ -1,8 +1,12 @@
 <div class="form__group form-checkbox">
+	<label for="form_field" class="control__label">foo</label>
 	<div class="controls">
 		<input
 		aria-describedby="guid-1"
+		id="form_field" 
+        name="form[field]"
 		type="checkbox"
+		value="1"
 		class="form__control checkbox" />
 		<span class="help-block" id="guid-1">my help text</span>
 	</div>
