--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/checkbox-required.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/checkbox-required.html
@@ -1,9 +1,11 @@
 <div class="form__group form-checkbox">
-    <label for="form_field" class="control__label">foo</label>
+    <label for="form_field" class="control__label">foo&nbsp;<span class="required-indicator" data-toggle="tooltips" title="required">*</span></label>
     <div class="controls">
         <input 
         id="form_field" 
         name="form[field]"
+        required
+        aria-required="true"
         type="checkbox" 
         value="1"
         class="form__control checkbox" />
