--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/textarea-help.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/textarea-help.html
@@ -1,7 +1,7 @@
 <div class="form__group">
-	<label class="control__label">foo</label>
+	<label for="form_field" class="control__label">foo</label>
 	<div class="controls">
-		<textarea aria-describedby="guid-1" class="form__control textarea"></textarea>
+		<textarea aria-describedby="guid-1" id="form_field" name="form[field]" class="form__control textarea"></textarea>
 		<span class="help-block" id="guid-1">my help text</span>
 	</div>
 </div>
