--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/textarea.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/textarea.html
@@ -1,6 +1,6 @@
 <div class="form__group">
-    <label class="control__label">foo</label>
+    <label for="form_field" class="control__label">foo</label>
     <div class="controls">
-        <textarea class="form__control textarea"></textarea>
+        <textarea id="form_field" name="form[field]" class="form__control textarea"></textarea>
     </div>
 </div>
