Add symfony support for integer and email types

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/number-help.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/number-help.html
@@ -5,7 +5,7 @@
 		aria-describedby="guid-1"
 		id="form_field" 
         name="form[field]" 
-		type="email"
+		type="number"
 		class="form__control"
 		/>
 		<span
