--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/number.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/number.html
@@ -4,7 +4,7 @@
         <input 
         id="form_field" 
         name="form[field]" 
-        type="email" 
+        type="number" 
         class="form__control" />
     </div>
 </div>
