Add support for symfony passwordType fields

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/password.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/password.html
@@ -1,5 +1,10 @@
 <div class="form__group">
+        <label for="form_field" class="control__label">foo</label>
     <div class="controls">
-        <input type="password" class="form__control" />
+        <input 
+        id="form_field" 
+        name="form[field]" 
+        type="password" 
+        class="form__control" />
     </div>
 </div>
