--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/password-help.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/password-help.html
@@ -1,7 +1,10 @@
 <div class="form__group">
+    <label for="form_field" class="control__label">foo</label>
     <div class="controls">
         <input
         aria-describedby="guid-1"
+        id="form_field" 
+		name="form[field]" 
         type="password"
         class="form__control" />
         <span class="help-block" id="guid-1">my help text</span>
