Add support for searchType and urlType

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/search.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/search.html
@@ -2,10 +2,9 @@
     <label for="form_field" class="control__label">foo</label>
     <div class="controls">
         <input 
-        id="form_field"
-        inputmode="url"
+        id="form_field" 
         name="form[field]" 
-        type="text" 
+        type="search" 
         class="form__control" />
     </div>
 </div>
