--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/url-help.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/url-help.html
@@ -1,9 +1,13 @@
 <div class="form__group">
-	<div class="controls">
+    <label for="form_field" class="control__label">foo</label>
+    <div class="controls">
 		<input 
 			aria-describedby="guid-1" 
-			type="url" 
+			id="form_field"
+			inputmode="url"
+			name="form[field]" 
+			type="text" 
 			class="form__control" />
 		<span class="help-block" id="guid-1">my help text</span>
-	</div>
+    </div>
 </div>
